# boxy

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  g3img.md  g3img_guide.md  package-lock.json  package.json  playwright.config.ts
.claude/: settings.json
.claude/agents/: code-reviewer.md  refactor-helper.md  ui-improver.md
.claude/skills/project-guide/: SKILL.md
.claude/skills/quality-checklist/: SKILL.md
.claude/skills/tldr-first/: SKILL.md
.claude/skills/ui-patterns/: SKILL.md
docs/: ARCHITECTURE.md  TESTING.md  UI_WALKTHROUGH.md  capture-ui-screenshots.mjs  code-audit.md
docs/assets/images/: boxy-architecture-20260112.txt  boxy-architecture-full-20260112.txt  boxy-file-flow-20260112.txt  boxy-request-flow-20260112.txt
docs/prompts/: 01-system-architecture.md  02-file-upload-flow.md  03-request-lifecycle.md  04-websocket-model.md  05-security-model.md  06-ui-feature-map.md  07-deployment-view.md  architecture.md  file-flow.md  request-lifecycle.md  security-model.md
src/: main.rs
static/: index.html
tests/: ui.spec.ts
