[package]
name = "boxy"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-ws = "0.3"
actix-multipart = "0.7"
tokio = { version = "1", features = ["full", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
mime_guess = "2"
async-recursion = "1"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
